--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/maubg-debug/generator-licenser#readme",
   "dependencies": {
+    "clear-terminal": "^0.0.2",
     "ink-form": "^1.0.1",
     "yeoman-generator": "^5.4.0"
   },
